--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,8 +4,8 @@
 
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="email-login">Username:</label>
+        <input class="form-input" type="text" id="username-login" />
       </div>
       <div class="form-group">
         <label for="email-login">Password:</label>
@@ -20,6 +20,10 @@
     <h2>Signup</h2>
 
     <form class="form signup-form">
+      <div class="form-group">
+        <label for="email-signup">First Last Name:</label>
+        <input class="form-input" type="text=" id="name-signup" />
+      </div>
       <div class="form-group">
         <label for="email-signup">Username:</label>
         <input class="form-input" type="text=" id="username-signup" />
