--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -4,16 +4,39 @@
 
     <form class="form new-post-form">
       <div class="form-group">
-        <label for="post-title">post title:</label>
-        <input class="form-input" type="text" id="post-title" name="post-title" />
+        <label for="post-title">Post title:</label>
+        <input
+          class="form-input"
+          type="text"
+          id="post-title"
+          name="post-title"
+        />
       </div>
       <div class="form-group">
-        <label for="post-text">write text body here:</label>
-        <input class="form-input" type="number" id="post-text" name="post-text" />
+        <label for="post-text">Quick Descritpion of your page:</label>
+        <input
+          class="form-input"
+          type="number"
+          id="post-text"
+          name="post-text"
+        />
+      </div>
+      <div class="form-group">
+        <label for="post-text">Talk about your post:</label>
+        <input
+          class="form-input"
+          type="number"
+          id="post-text"
+          name="post-text"
+        />
       </div>
       <div class="form-group">
         <label for="post-image">link image here:</label>
-        <textarea class="form-input" id="post-image" name="post-image"></textarea>
+        <textarea
+          class="form-input"
+          id="post-image"
+          name="post-image"
+        ></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
