--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,46 +1,50 @@
-<div class="row">
-  <div class="col-md-6">
-    <h2>Login</h2>
+<div class='row'>
+	<div class='col-md-6'>
+		<h2>Login</h2>
 
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">Username:</label>
-        <input class="form-input" type="text" id="username-login" />
-      </div>
-      <div class="form-group">
-        <label for="email-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">Login</button>
-      </div>
-    </form>
-  </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
+		<form class='form login-form'>
+			<div class='form-group'>
+				<label for='email-login'>Username:</label>
+				<input class='form-input' type='text' id='username-login' />
+			</div>
+			<div class='form-group'>
+				<label for='email-login'>Password:</label>
+				<input class='form-input' type='password' id='password-login' />
+			</div>
+			<div class='form-group'>
+				<button class='btn btn-primary' type='submit' id='logIn'>Login</button>
+			</div>
+		</form>
+	</div>
+	<div class='col-md-6'>
+		<h2>Signup</h2>
 
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="email-signup">First Last Name:</label>
-        <input class="form-input" type="text=" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">Username:</label>
-        <input class="form-input" type="text=" id="username-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">Email:</label>
-        <input class="form-input" type="text=" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">Password:</label>
-        <input class="form-input" type="text=" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">Signup</button>
-      </div>
-    </form>
-  </div>
+		<form class='form signup-form'>
+			<div class='form-group'>
+				<label for='email-signup'>First Last Name:</label>
+				<input class='form-input' type='text=' id='name-signup' />
+			</div>
+			<div class='form-group'>
+				<label for='email-signup'>Username:</label>
+				<input class='form-input' type='text=' id='username-signup' />
+			</div>
+			<div class='form-group'>
+				<label for='email-signup'>Email:</label>
+				<input class='form-input' type='text=' id='email-signup' />
+			</div>
+			<div class='form-group'>
+				<label for='email-signup'>Password:</label>
+				<input class='form-input' type='text=' id='password-signup' />
+			</div>
+			<div class='form-group'>
+				<button
+					class='btn btn-primary'
+					type='submit'
+					id='signUp'
+				>Signup</button>
+			</div>
+		</form>
+	</div>
 </div>
 
-<script src="./js/login.js"></script>
+<script src='./js/login.js'></script>
