Working on getting the js to import to the post creation page so we can test the javascript and routing

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,7 @@
 		/>
 		<!-- Link to CSS -->
 		<link rel='stylesheet' href='css/style.css' />
+		<script src='/public/js/createPost.js'></script>
 		<title>Knowledgebase</title>
 	</head>
 	<body>
