--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,10 +67,12 @@ button {
 	padding: 4px 8px;
 	border-radius: 50px;
 	transition: all 0.3s ease 0s;
+	border: none;
 }
 
 button:hover {
-	transform: scale(1.3);
+	background-color: var(--color-light);
+	color: white;
 }
 
 #comment-box,
