--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -16,19 +16,14 @@
 				<label for='post-text'>Quick Descritpion of your page:</label>
 				<input
 					class='form-input'
-					type='number'
-					id='post-text'
+					type='text'
+					id='post-description'
 					name='post-text'
 				/>
 			</div>
 			<div class='form-group'>
 				<label for='post-text'>Talk about your post:</label>
-				<input
-					class='form-input'
-					type='number'
-					id='post-text'
-					name='post-text'
-				/>
+				<input class='form-input' type='text' id='post-text' name='post-text' />
 			</div>
 			<div class='form-group'>
 				<label for='post-image'>link image here:</label>
@@ -39,7 +34,11 @@
 				></textarea>
 			</div>
 			<div class='form-group'>
-				<button type='submit' class='btn btn-primary'>Create</button>
+				<button
+					type='submit'
+					class='btn btn-primary'
+					id='submitBtn'
+				>Create</button>
 			</div>
 		</form>
 	</div>
