--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,13 @@
 			ref='stylesheet'
 			href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css'
 		/>
+		
+		<!-- Addidng Bootstrap -->
+		<meta charset="utf-8">
+  		Make Parties
+  		<!-- Latest compiled and minified CSS -->
+  		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
 		<!-- Link to CSS -->
 		<link rel='stylesheet' href='css/style.css' />
 		<script src='/public/js/createPost.js'></script>
@@ -40,5 +47,7 @@
 		<main>
 			{{{body}}}
 		</main>
+		<!-- Latest compiled and minified JavaScript -->
+  		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	</body>
 </html>
