--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,14 +10,9 @@
 			href='https://fonts.googleapis.com/css2?family=Convergence&family=Genos&display=swap'
 			rel='stylesheet'
 		/>
-		<!-- Adding Font Awesome -->
-		<link
-			ref='stylesheet'
-			href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css'
-		/>
 		<!-- Link to CSS -->
 		<link rel='stylesheet' href='css/style.css' />
-		<script src='/public/js/createPost.js'></script>
+		<script src='./public/js/createPost.js'></script>
 		<title>Knowledgebase</title>
 	</head>
 	<body>
