--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -2,7 +2,7 @@
 	<div class='col-md-6'>
 		<h3>Create New Post:</h3>
 
-		<form class='form new-post-form'>
+		<form class='form new-post-form' action='/newPost' method='POST'>
 			<div class='form-group'>
 				<label for='post-title'>Post title:</label>
 				<input
@@ -23,7 +23,12 @@
 			</div>
 			<div class='form-group'>
 				<label for='post-text'>Talk about your post:</label>
-				<input class='form-input' type='text' id='post-text' name='post-text' />
+				<input
+					class='form-input'
+					type='text'
+					id='post-text'
+					name='post-content'
+				/>
 			</div>
 			<div class='form-group'>
 				<label for='post-image'>link image here:</label>
