--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -2,7 +2,7 @@
 	<div class='col-md-6'>
 		<h3>Create New Post:</h3>
 
-		<form class='form new-post-form' action='/newPost' method='POST'>
+		<form class='form new-post-form' action='/api/createPost' method='POST'>
 			<div class='form-group'>
 				<label for='post-title'>Post title:</label>
 				<input
