reimplemented the examples

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,36 @@
-<h2> HOME PAGE</h2>
+<h1> HOME PAGE</h2>
+
+<img
+	src='.\reasources\mountain3.jpg'
+	alt='Placeholder Image'
+	width='200'
+	height='200'
+/>
+
+<h2> TEST TITLE</h2>
+<p> Test short description</p>
+<p> Test text that goes into more detail about the project but then just ...</p>
+
+<img
+	src='.\reasources\mountains 2.jpg'
+	alt='Placeholder Image'
+	width='200'
+	height='200'
+/>
+
+<h2> Really Big Mountain</h2>
+<p> Mount Super big Mountain</p>
+<p> This mountain is like really big so big in fact that ...</p>
+
+<img
+	src='.\reasources\mountains.jpg'
+	alt='Placeholder Image'
+	width='200'
+	height='200'
+/>
+
+<h2> Swimming in blue water</h2>
+<p>Some people get confused when swimming in crystal clear water.</p>
+<p> So much water is dirty now a days as a professional clear water swimmer... </p>
+
+
