Creating posts works now and stores to proper knowledgebase. Those then populate the home page for people to see. Images are working on the creation page but seem to be failing on the home page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,3 +83,17 @@ button:hover {
 #post:hover {
 	background-color: deeppink;
 }
+
+img {
+	max-width: 500px;
+	max-height: 500px;
+}
+
+.displayArea {
+	width: 50%;
+}
+
+.descriptionText {
+	width: 500px;
+	height: 100px;
+}
