--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,40 +1,5 @@
 <h1> Welcome To Knowledgebase! </h1>
-<div>
-	<img
-		src='.\images\mountain3.jpg'
-		alt='Placeholder Image'
-		width='200'
-		height='200'
-	/>
-
-	<h2> TEST TITLE</h2>
-	<p> Test short description</p>
-	<p> Test text that goes into more detail about the project but then just ...</p>
-</div>
-
-<div>
-	<img
-		src='.\images\mountains 2.jpg'
-		alt='Placeholder Image'
-		width='200'
-		height='200'
-	/>
-
-	<h2> Really Big Mountain</h2>
-	<p> Mount Super big Mountain</p>
-	<p> This mountain is like really big so big in fact that ...</p>
-<div>
-
-<div>
-	<img
-		src='.\images\mountains.jpg'
-		alt='Placeholder Image'
-		width='200'
-		height='200'
-	/>
-
-	<h2> Swimming in blue water</h2>
-	<p>Some people get confused when swimming in crystal clear water.</p>
-	<p> So much water is dirty now a days as a professional clear water swimmer... </p>
-</div>
+{{#each postsInfo as |post|}}
+{{> allPosts}}
+{{/each}}
 
