--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,11 +6,13 @@
 		<label for="'title">Post title:</label>
 		<input type='text' id='title' />
 		<br />
-		<label for='description'>Tell everything about this suject: </label>
-		<input type='text' id='description' />
+		<label for='description'>Tell everything about this subject: </label>
+		<br />
+		<input type='text' size='50' id='description' class='descriptionText' />
 		<br />
 		<label for='image'>Add a picture related to your post!</label>
 		<input type='file' id='image' appect='image/' />
+		<div id='imageDisplay' class='displayArea'></div>
 		<br />
 		<button type='submit'>Submit</button>
 	</form>
