All images for posts are now showing and storing correctly just need to make the pages look nicer now

--- a/views/partials/allPosts.handlebars
+++ b/views/partials/allPosts.handlebars
@@ -1,6 +1,6 @@
 <div>
 	<div>
-		{{img}}
+		<img src='./images/{{imageName}}' alt='{{imageLocation}}' />
 	</div>
 	<div>
 		<h2>{{postTitle}} </h2>
