--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,7 +2,7 @@
 <!-- Section for the logged in user to create a new post for the webstie -->
 <div id='createPost'>
 	<div class='newPost'><h3>Create a Post!</h3></div>
-	<form id='newPostForm'>
+	<form id='newPostForm' enctype='multipart/form-data'>
 		<label for="'title">Post title:</label>
 		<input type='text' id='title' />
 		<br />
